# internal/router/router.go
@@ -107,6 +107,8 @@ func Serve() {
 	r.GET("/api.php", payment.QueryMerchantOrder)
 	// 退款接口
 	r.POST("/api.php", payment.RefundMerchantOrder)
+	// 商户付款接口
+	r.POST("/pay/payout", payment.RequireMerchantAuth(), payment.MerchantPayout)
 
 	apiGroup := r.Group(config.Config.App.APIPrefix)
 	{
